# warp-md

./: .gitbook.yaml  .gitignore  Cargo.toml  MANIFEST.in  README.md  consumer_clarification.md  consumer_request.md  gpu_colab_test.ipynb  pyproject.toml  warp_pack_gpu_validation.ipynb
crates/traj-engine/: Cargo.toml
crates/traj-engine/src/: correlators.rs  executor.rs  feature_store.rs  lib.rs  plans.rs  tests.rs
crates/traj-engine/src/correlators/: multi_tau.rs  ring.rs
crates/traj-engine/src/plans/: analysis.rs  geometry.rs  matrix.rs  mod.rs  polymer.rs  rdf.rs  rg.rs  rmsd.rs  rmsd_part1.rs  rmsd_part2.rs  rmsd_part3.rs
crates/traj-engine/src/tests/: analysis_smoke_tests.rs  correlation_structure_tests.rs  geometry_matrix_tests.rs  lipid_analysis_tests.rs  mod.rs  part1.rs  part2.rs  part3.rs  part4.rs  torsion_gist_tests.rs
crates/traj-engine/tests/: correlators.rs  feature_store.rs  trj_analysis_sample.rs
crates/traj-gpu/: Cargo.toml
crates/traj-gpu/src/: cuda.rs  lib.rs
crates/traj-gpu/src/cuda/: coordinate_transform.rs  group_observables.rs  mod.rs  ops_part1.rs  ops_part7.rs  packing_constraints.rs  pairwise_distance.rs  spatial_geometry.rs  structure_polymer.rs
crates/traj-io/: Cargo.toml  build.rs
crates/traj-io/src/: cpt.rs  dcd.rs  gro.rs  gro_traj.rs  gromos96_traj.rs  h5md.rs  lib.rs  pdb.rs  pdb_traj.rs  selection_support.rs  tng.rs  trr.rs  xtc.rs  xyz_traj.rs
crates/traj-py/: Cargo.toml  build.rs
crates/traj-py/src/: analysis.rs  contract.rs  correlation.rs  geometry.rs  io.rs  lib.rs  pack.rs  py_agent_contract.rs  py_agent_contract_catalog.rs  py_part1.rs  py_part10.rs  py_part2.rs  py_part3.rs  py_part4.rs  py_part5.rs  py_part6.rs  py_part7.rs  py_part8.rs  py_part9.rs  structure.rs  transform.rs
crates/traj-py/src/contract/: catalog.rs
crates/traj-py/tests/: warp_md_cli_tests.rs
crates/warp-build/: Cargo.toml
crates/warp-build/src/: contract.rs  lib.rs  minimize.rs  polymer.rs
crates/warp-build/tests/: build_tests.rs  cli_contract_tests.rs
crates/warp-cg/: Cargo.toml
crates/warp-cg/src/: agent.rs  agent_artifacts.rs  agent_bo.rs  agent_bonded_classing.rs  agent_contract.rs  agent_defaults.rs  agent_execution.rs  agent_pso.rs  agent_reference_only.rs  agent_reference_result.rs  agent_render.rs  agent_runtime.rs  agent_source_bonded_terms.rs  agent_source_mapping.rs  agent_source_ndx.rs  agent_source_template.rs  agent_source_types.rs  agent_source_validation.rs  agent_tests.rs  agent_validation.rs  agent_validation_candidate_extraction.rs  backmap.rs  backmap_contract.rs  backmap_contract_io.rs  backmap_geometry.rs  bonded_terms.rs  build_box.rs  build_contract.rs  build_contract_contract.rs  build_contract_defaults.rs  build_contract_inserted.rs  build_contract_inserted_library.rs  build_contract_inserted_placement.rs  build_contract_ion_library.rs  build_contract_leaflet_area.rs  build_contract_leaflet_constraints.rs  build_contract_leaflet_emit.rs  build_contract_leaflet_grid.rs  build_contract_math3d.rs  build_contract_molecule.rs  (+72 more)
crates/warp-cg/src/agent_test_parts/: candidate_extraction_validation.rs  ndx_mapping.rs  precomputed_reference.rs  reference_targets.rs  request_examples_and_sources.rs  validation_and_outputs.rs
crates/warp-cg/src/build_contract_geometry_backend/: geo_boolean.rs  mod.rs
crates/warp-cg/src/build_contract_test_parts/: cell_geometry_and_capabilities.rs  circle_rectangle_region_unions.rs  clipped_and_overlapping_ellipse_unions.rs  coordinate_less_solvent_registry_inserted.rs  disjoint_mixed_shape_unions.rs  ellipse_multi_shape_region_unions.rs  geo_backend_wrapping_and_holes.rs  geo_polygon_boolean_backend.rs  inserted_builtin_solute_charges.rs  inserted_component_schema_validation.rs  ltf_complex_lipid_solvent_aliases.rs  ltf_sphingolipid_solvent_aliases.rs  ltf_tailcode_solvent_aliases.rs  mixed_curve_polygon_union_exact.rs  nonconvex_polygon_ellipse_unions.rs  output_and_charge_summary.rs  patch_region_area_counts.rs  protein_boundary_polygon_hulls.rs  reference_counts_and_charge_overrides.rs  seeded_candidate_sources.rs  solvent_library_martini_small_molecules.rs  solvent_library_nucleic_sirah_topology.rs  solvent_tailcodes_and_ions.rs  stacked_membranes_and_protein_boundaries.rs  triclinic_eighth_neighbor_wrapping.rs  triclinic_third_neighbor_wrapping.rs  triclinic_wrapped_region_adaptive.rs  triclinic_wrapped_region_adversarial.rs
crates/warp-cg/src/build_solutes_templates/: martini.rs  nucleic.rs
crates/warp-cg/src/build_solutes_test_parts/: amino_acid_registry_coverage.rs
crates/warp-cg/src/optimize/: bounds.rs  file_evaluator.rs  initial_guess.rs  mod.rs  objective.rs  reference_target_tests.rs  tests.rs  tests_file_evaluator.rs  tests_named_evaluator.rs  types.rs  utils.rs
crates/warp-cg/src/reference/: extractor.rs  mod.rs  (+4 more)
crates/warp-cg/tests/: build_cli.rs  polyply_backmap_parity.rs  simulate_cli.rs  test_agent_backmap.rs  validation.rs  xtb_benzene.rs  xtb_validation.rs
crates/warp-pack/: Cargo.toml
crates/warp-pack/src/: agent.rs  atom_params.rs  charge.rs  config.rs  constraint_penalty.rs  constraints.rs  error.rs  gencan.rs  gencan_math.rs  gencan_objective.rs  geom.rs  geometry.rs  gpu_cells.rs  gpu_constraints.rs  inp.rs  lib.rs  movebad.rs  pack.rs  pack_ops.rs  pbc.rs  placement.rs  relax.rs  restart.rs  spatial_hash.rs  streaming.rs
crates/warp-pack/tests/: agent_tests.rs  config_tests.rs  constraints_tests.rs  io_tests.rs  pack_run_tests.rs  pack_tests.rs  streaming_cli_tests.rs  test_support.rs
crates/warp-pep/: Cargo.toml
crates/warp-pep/src/: analysis.rs  builder.rs  caps.rs  convert.rs  coord.rs  d_amino.rs  disulfide.rs  error.rs  geometry.rs  hydrogen.rs  json_spec.rs  lib.rs  main.rs  mutation.rs  non_standard.rs  pdb_writer.rs  residue.rs  selection.rs  streaming.rs  types.rs  validation.rs
crates/warp-pep/tests/: integration.rs
crates/warp-qm/: Cargo.toml  README.md
crates/warp-qm/examples/: resp2_workflow_production.request
crates/warp-qm/src/: cli.rs  contract.rs  lib.rs  molecule.rs
crates/warp-qm/tests/: contract_tests.rs
(+2169 files in other folders)
