[workspace]
resolver = "2"
members = [
  "crates/traj-core",
  "crates/traj-io",
  "crates/traj-engine",
  "crates/traj-gpu",
  "crates/traj-kernels",
  "crates/traj-py",
  "crates/warp-common",
  "crates/warp-structure",
  "crates/warp-build",
  "crates/warp-qm",
  "crates/warp-pack",
  "crates/warp-cg",
  "crates/warp-pep",
  "crates/warp-topology-graph",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75"
