[build-system]
requires = ["maturin>=1.13.1"]
build-backend = "maturin"

[project]
name = "warp-md"
version = "0.4.30"
description = "warp-md Python bindings"
authors = [
    { name = "Ayodele Faleti" },
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pydantic>=2",
]

[project.optional-dependencies]
cli = ["PyYAML"]
gist = ["openmm"]
martini = ["openmm", "martini-openmm"]

[project.scripts]
warp-md-python = "warp_md.cli:main"
warp-build = "warp_md.build_cli:main"
warp-pack = "warp_md.pack_cli:main"
warp-cg = "warp_md.cg_cli:main"
warp-pep = "warp_md.pep_cli:main"
warp-qm = "warp_md.qm_cli:main"

[tool.maturin]
manifest-path = "crates/traj-py/Cargo.toml"
module-name = "warp_md.traj_py"
python-source = "python"
features = ["extension-module"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "crates/**",
    "python/**",
    "scripts/**",
    "docs/**",
    "MANIFEST.in",
]
sdist-include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "crates/**",
    "python/**",
    "scripts/**",
    "docs/**",
    "MANIFEST.in",
]
