[package]
name = "traj-engine"
version = "0.4.23"
edition = "2021"
license = "MIT"

[dependencies]
traj-core = { path = "../traj-core" }
traj-io = { path = "../traj-io", default-features = false }
warp-structure = { path = "../warp-structure" }
nalgebra = "0.32"
traj-gpu = { path = "../traj-gpu" }
rustfft = "6.2"
bytemuck = { version = "1.15", features = ["extern_crate_alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.33.1"

[dev-dependencies]
libloading = "0.8"

[features]
default = ["hdf5-vendored"]
hdf5-vendored = ["traj-io/hdf5-vendored"]
cuda = ["traj-gpu/cuda"]
