[package]
name = "traj-io"
version = "0.1.5"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
traj-core = { path = "../traj-core" }
xdrfile = "0.3"
bytemuck = { version = "1.15", features = ["extern_crate_alloc"] }
hdf5_metno = { package = "hdf5-metno", version = "0.12.4", features = ["static", "zlib"] }
ndarray = "0.15.6"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
cc = "1.1"
