[package]
name = "traj-py"
version = "0.1.5"
edition = "2021"
license = "MIT"

[lib]
name = "traj_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
traj-core = { path = "../traj-core" }
traj-io = { path = "../traj-io" }
traj-engine = { path = "../traj-engine" }
warp-structure = { path = "../warp-structure" }
warp-build = { path = "../warp-build" }
warp-pack = { path = "../warp-pack" }
warp-pep = { path = "../warp-pep" }
pyo3 = { version = "0.21" }
numpy = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
schemars = { version = "0.8.22", features = ["derive"] }

[build-dependencies]
pyo3-build-config = { version = "0.21", features = ["resolve-config"] }

[features]
cuda = ["traj-engine/cuda"]
extension-module = ["pyo3/extension-module"]
auto-initialize = ["pyo3/auto-initialize"]
