[package]
name = "warp-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rand = "0.8.5"
schemars = { version = "0.8.22", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
traj-core = { path = "../traj-core" }
warp-topology-graph = { path = "../warp-topology-graph" }
warp-pack = { path = "../warp-pack" }
