[package]
name = "warp-cg"
version = "0.4.23"
edition.workspace = true
license.workspace = true

[lib]
name = "warp_cg"
path = "src/lib.rs"

[[bin]]
name = "warp-cg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8.22", features = ["derive"] }
anyhow = "1.0"
geo = "0.33.1"
itertools = "0.12"
sci-form = "0.15"
tempfile = "3.8"
which = "4.4"
traj-core = { path = "../traj-core" }
traj-io = { path = "../traj-io", default-features = false }
warp-common = { path = "../warp-common" }
warp-structure = { path = "../warp-structure" }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["serde1"] }

[features]
default = ["hdf5-vendored"]
hdf5-vendored = ["traj-io/hdf5-vendored"]
