[package]
name = "warp-pack"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
thiserror = "1.0.58"
traj-core = { path = "../traj-core" }
traj-gpu = { path = "../traj-gpu", optional = true }

[features]
cuda = ["traj-gpu/cuda"]
