[package]
name = "warp-pack"
version = "0.4.21"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
rand = "0.8.5"
schemars = { version = "0.8.21", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
thiserror = "1.0.58"
traj-core = { path = "../traj-core" }
traj-gpu = { path = "../traj-gpu", optional = true }
warp-common = { path = "../warp-common" }
warp-structure = { path = "../warp-structure" }
warp-topology-graph = { path = "../warp-topology-graph" }

[features]
cuda = ["traj-gpu/cuda"]

[dev-dependencies]
serial_test = "3.2.0"
warp-build = { path = "../warp-build" }
