[package]
name = "warp-pep"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Peptide builder and mutation engine"

[[bin]]
name = "warp-pep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp-pack = { path = "../warp-pack" }
