[package]
name = "warp-pep"
version = "0.4.18"
edition.workspace = true
license.workspace = true
description = "Peptide builder and mutation engine"

[[bin]]
name = "warp-pep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
traj-core = { path = "../traj-core" }
warp-structure = { path = "../warp-structure" }
