[package]
name = "warp-qm"
version = "0.4.23"
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "warp-qm"
path = "src/bin/warp-qm.rs"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
schemars = { version = "0.8.22", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_yaml = "0.9.34"
warp-structure = { path = "../warp-structure" }
